# Energy-Languages-PowerCap

./: .gitignore  LICENSE  README.md  afterSetup.txt  config.env  fortran.sh  gen-input.sh  languagesSetup.sh  measure  measure.sh  measurements.csv  measuresSetup.sh  raplLibrariesSetup.sh  setup.sh  testing.sh  testlogic.sh
Ada/binary-trees/: Makefile
Ada/fasta/: Makefile
Ada/k-nucleotide/: Makefile
Ada/pidigits/: Makefile
Ada/regex-redux/: Makefile
Ada/reverse-complement/: Makefile
Ada/spectral-norm/: Makefile
C++/: C++.csv
C++/binary-trees/: Makefile
C++/chameneos-redux/: Makefile
C++/fannkuch-redux/: Makefile
C++/fasta/: Makefile
C++/k-nucleotide/: Makefile
C++/mandelbrot/: mandelbrot.c++
C++/pidigits/: Makefile  pidigits.gpp-5.c++
C++/regex-redux/: Makefile  regexredux.gpp-6.c++
C++/reverse-complement/: Makefile
C/fasta/: Makefile  (+1 more)
CSharp/: CSharp.csv
Chapel/: Chapel.csv
Dart/: compile_all.py
Erlang/: compile_all.py
JavaScript/: JavaScript.csv
Languages/Rust/regex-redux/: Cargo.toml  Makefile  measurements.csv
Languages/Rust/reverse-complement/: Cargo.toml  Makefile  measurements.csv
NoteBooks/: shared_statistics.ipynb  statistics.ipynb  statistics_benchmarks.ipynb
PHP/: PHP.csv
Perl/: Perl.csv
RAPL/: main  main.c  measurements.csv  sensors.c  test.csv
Racket/: Racket.csv
Utils/: arrayUpdate.py  raplCapUpdate.py  temperatureUpdate.py
benchmarks/: README.md  measure.sh  measurements_benchmarks.csv  setup_benchmarks.sh
docs/: apresentacao.pptx  poster.pptx
validation_tools/: install.sh  measurements.csv
(+734 files in other folders)
