[package]
name = "reverse-complement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
crayon = "0.7.1"
rayon = "1.5"
memchr = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1  # Set the desired number of codegen units
panic = "abort"    # Optional: Set panic strategy if needed

[build]
target-cpu = "core2"
